minion translator all done without css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This is Minion Translator!</h1>
+    <h1>Talk Minion!</h1>
+
+    <div class="container">
+        
+        <textarea placeholder="put your sentence here and we will convert it to minion" id="text_input"></textarea>
+        <button class="translate_btn" type="submit">Translate</button>
+
+        <div style="font-size: larger; font-weight: bolder;">Output will come here👇</div>
+        <div class="output">
+            Bello👋, mi nomba tis krushna
+        </div>
+
+    </div>
+
+    <script src="index.js"></script>
 </body>
 </html>
